# dtMath

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  README.md  dtMathVS.sln  gitlab-ci.yml
cmake/: FindOrFetch.cmake  ProjectDependancies.cmake  ProjectOptions.cmake
doc/: GitLab CICD를 이용한 컴파일빌드 자동화.md
dtMathVS/: dhTerm.cpp  dhTimeCheck.hpp  djBezier.hpp  djBezierOri.hpp  dtBezier.hpp  dtGaitCPG.hpp  dtGaitPlaner.hpp  dtGaitPlaner.old  dtMathVS.vcxproj  dtMathVS.vcxproj.filters  dtStanceBezier.hpp  dtSwingBezier.hpp  main.cpp  testCompareClass.cpp  testCompareClass.h  testContiAlgebraicRiccatiEq.cpp  testCscMatrix.cpp  testCscMatrix.h  testDecomposition.cpp  testEulerAngles.cpp  testEulerAngles.h  testGnuPlot.cpp  testMPC.cpp  testMPC.h  testMatrix.cpp  testMatrix.h  testMatrix3.cpp  testMatrixInverse.cpp  testOriErr.cpp  testPrint.h  testQuadProg.cpp  testQuaternion.cpp  testRotation.cpp  testTransform.cpp  testVector.cpp  testVector.h  testVector3.cpp  testVector4.cpp  testVector6.cpp
dtMathVS/Debug/: vc141.idb
dtMathVS/Debug/dtMathVS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  dtMathVS.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
dtMathVS/Release/dtMathVS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  dtMathVS.lastbuildstate  dtMathVS.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
dtMathVS/dtMath/: dtCARE.hpp  dtCARE.ipp  dtCommaInit.hpp  dtCscMatrix.hpp  dtCscMatrix.ipp  dtDefine.h  dtGnuPlot.hpp  dtGnuPlot.hpp.old  dtGnuPlot.ipp  dtLDLT.hpp  dtLDLT.ipp  dtLLT.hpp  dtLLT.ipp  dtLowerTriangular.hpp  dtLowerTriangular.ipp  dtMath.h  dtMatrix.hpp  dtMatrix.ipp  dtMatrix3.hpp  dtMatrix3.ipp  dtNoPivLU.hpp  dtNoPivLU.ipp  dtPartialPivLU.hpp  dtPartialPivLU.ipp  dtQR.hpp  dtQR.ipp  dtQuadProg.hpp  dtQuadProg.ipp  dtQuadProg_old.hpp  dtQuaternion.hpp  dtQuaternion.ipp  dtRotation.hpp  dtRotation.ipp  dtSVD.hpp  dtSVD.ipp  dtTransform.hpp  dtTransform.ipp  dtUpperTriangular.hpp  dtUpperTriangular.ipp  dtVector.hpp  (+7 more)
extlib/: osqp.lib  qdldl.lib
extlib/googletest/googletest-build/: CTestTestfile.cmake  cmake_install.cmake
extlib/googletest/googletest-build/googlemock/: CTestTestfile.cmake  cmake_install.cmake
extlib/googletest/googletest-build/googletest/: CTestTestfile.cmake  cmake_install.cmake
extlib/googletest/googletest-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
extlib/googletest/googletest-subbuild/googletest-populate-prefix/src/googletest-populate-stamp/: googletest-populate-gitinfo.txt
extlib/googletest/googletest-subbuild/googletest-populate-prefix/tmp/: googletest-populate-gitclone.cmake  googletest-populate-gitupdate.cmake  googletest-populate-mkdirs.cmake
extlib/osqp/osqp-build/: cmake_install.cmake  osqp-targets.cmake
extlib/osqp/osqp-build/include/: cmake_install.cmake
extlib/osqp/osqp-build/lin_sys/: cmake_install.cmake
extlib/osqp/osqp-build/lin_sys/direct/: cmake_install.cmake
extlib/osqp/osqp-build/lin_sys/direct/pardiso/: cmake_install.cmake
extlib/osqp/osqp-build/lin_sys/direct/qdldl/: cmake_install.cmake
extlib/osqp/osqp-build/lin_sys/direct/qdldl/qdldl_sources/: cmake_install.cmake  cmake_uninstall.cmake  qdldl-targets.cmake
extlib/osqp/osqp-build/src/: cmake_install.cmake
extlib/osqp/osqp-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
extlib/osqp/osqp-subbuild/osqp-populate-prefix/src/osqp-populate-stamp/: osqp-populate-gitclone-lastrun.txt
extlib/osqp/osqp-subbuild/osqp-populate-prefix/tmp/: osqp-populate-gitclone.cmake  osqp-populate-gitupdate.cmake  osqp-populate-mkdirs.cmake
include/dtMath/: dtAssert.h  dtCARE.h  dtCARE.tpp  dtCommaInit.h  dtCscAMD.h  dtCscAMD.tpp  dtCscLLT.h  dtCscLLT.tpp  dtCscMatrix.h  dtCscMatrix.tpp  dtCscMatrix0.h  dtCscMatrix0.tpp  dtDefine.h  dtFullPivLU.h  dtFullPivLU.tpp  dtFullPivLU0.h  dtFullPivLU0.tpp  dtLDLT.h  dtLDLT.tpp  dtLDLT0.h  dtLDLT0.tpp  dtLLT.h  dtLLT.tpp  dtLLT0.h  dtLLT0.tpp  dtLowerMatrix.h  dtLowerMatrix.tpp  dtLowerMatrix0.h  dtLowerMatrix0.tpp  dtMath.h  dtMathMem.h  dtMathMem.ipp  dtMatrix.h  dtMatrix.tpp  dtMatrix0.h  dtMatrix0.tpp  dtMatrix3.h  dtMatrix3.tpp  dtNoPivLU.h  dtNoPivLU.tpp  (+38 more)
test/: CMakeLists.txt
test/user/: dhTerm.h  main.cpp  testCompareClass.cpp  testContiAlgebraicRiccatiEq.cpp  testContiAlgebraicRiccatiEq.h  testCscMatrix.cpp  testDecomposition.cpp  testDecomposition.h  testEulerAngles.cpp  testGnuPlot.cpp  testGnuPlot.h  testMPC.cpp  testMatrix.cpp  testMatrix3.cpp  testMatrix3.h  testMatrixInverse.cpp  testMatrixInverse.h  testOriErr.cpp  testOriErr.h  testPrint.cpp  testPrint.h  testQuadProg.cpp  testQuadProg.h  testQuaternion.cpp  testQuaternion.h  testRotation.cpp  testRotation.h  testTransform.cpp  testTransform.h  testVector.cpp  testVector3.cpp  testVector3.h  testVector4.cpp  testVector4.h  testVector6.cpp  testVector6.h
user/: CMakeLists.txt  main.cpp
user/dtMath/: dtCARE.h  dtCARE.tpp  dtCommaInit.h  dtCscMatrix.h  dtCscMatrix.tpp  dtDefine.h  dtLDLT.h  dtLDLT.tpp  dtLLT.h  dtLLT.tpp  dtLowerTriangular.h  dtLowerTriangular.tpp  dtMath.h  dtMatrix.h  dtMatrix.tpp  dtMatrix3.h  dtMatrix3.tpp  dtNoPivLU.h  dtNoPivLU.tpp  dtPartialPivLU.h  dtPartialPivLU.tpp  dtQR.h  dtQR.tpp  dtQuadProg.h  dtQuadProg.tpp  dtQuaternion.h  dtQuaternion.tpp  dtRotation.h  dtRotation.tpp  dtSVD.h  dtSVD.tpp  dtTransform.h  dtTransform.tpp  dtUpperTriangular.h  dtUpperTriangular.tpp  dtVector.h  dtVector.tpp  dtVector3.h  dtVector3.tpp  dtVector4.h  (+3 more)
user/robotics/: djBezier.h  djBezier.tpp  djBezierOri.h  djBezierOri.tpp  dtBezier.h  dtBezier.tpp  dtGaitCPG.h  dtGaitCPG.tpp  dtGaitPlanner.h  dtGaitPlanner.tpp  dtStanceBezier.h  dtStanceBezier.tpp  dtSwingBezier.h  dtSwingBezier.tpp
user/utility/: dhTimeCheck.cpp  dhTimeCheck.h  dtGnuPlot.h  dtGnuPlot.tpp
